- fixed NAPTR and SRV (in regular and ANY replies) to NOT compress names in
  their rdata (as per RFC)
- shared memory in delphinusdnsd now has a guard page between each slot, if
  this region of memory gets used delphinusdnsd will segment violate and a
  possible attack is foiled.  The detriment is a higher memory footprint,
  but we can't do without this now that it's in.

[2021] Changes in RELEASE_1_6 from RELEASE_1_5

- rdomain support in OpenBSD
- fudgesize in forwarding mode for setting higher FUDGE value
- ntphack in main daemon for allowing *.ntp.org through
- setproctitle setting of an identifier for identifying a delphinusdnsd in
  systems that have multiple delphinusdnsd running
- change every instance of "master" to "primary"
- add a 10-query query cache (memoization) which speeds up subsequent answers
- ZONEMD RR's can now be added to a zone in both DNSSEC and non-DNSSEC zones.
  They can also be integrity checked with dddctl zonemd.
- RFC 9018/7873 Server DNS Cookies support, at first for OpenBSD only
- BIND & nsd by default dropped the question in the header on subsequent AXFR's
  (with the first envelope having it, after that no), adjust to this and add
  primary-axfr-old-behaviour and replicant-axfr-old-behaviour options to the
  global options in order to keep functionality of the old way, however this
  will not be documented in the manpages.  Also see -O switch in dddctl query
  in the source.
- reworked the CNAME code (we now reply to more RR's)
- added wildcarding for *.domain.tld domainnames (with DNSSEC support).
- fixed an endless loop in raxfr process when cortex process died
- added CDS/CDNSKEY support (RFC 8078 standard) this is rather an experimental
  addition since I can't use it with my tld's which are not listed here:
  https://github.com/oskar456/cds-updates/ and 
	https://www.internetsociety.org/deploy360/dnssec/maps/
  ... perhaps this standard will see more adoption in the future, and I can
  use it.